SPDX: all the modules CMakeLists are BSD-2-Clause
The build instructions are not that interesting, it's a toss-up
between CC0 and BSD-2, but because other CMake bits are BSD-2-Clause,
apply that to more CMakeLists. The copyright date isn't all that
accurate, but these are just inconsequential files.

--- a/src/modules/CMakeLists.txt
+++ b/src/modules/CMakeLists.txt
@@ -1,3 +1,9 @@
+# === This file is part of Calamares - <https://github.com/calamares> ===
+#
+#   SPDX-FileCopyrightText: 2020 Adriaan de Groot <groot@kde.org>
+#   SPDX-License-Identifier: BSD-2-Clause
+#
+
 # The variable SKIP_MODULES can be set to skip particular modules;
 # individual modules can also decide they must be skipped (e.g. OS-specific
 # modules, or ones with unmet dependencies). Collect the skipped modules
